*** empty log message ***

--- a/doc/txt/AUTHORS
+++ b/doc/txt/AUTHORS
@@ -1,4 +1,4 @@
-The authors of the software 
+The authors of the software in alphabetical order
 (if you have suggestions, questions, bug-reports...)
 
 -----------------------------------------------------
