*** empty log message ***

--- a/doc/txt/AUTHORS
+++ b/doc/txt/AUTHORS
@@ -2,8 +2,12 @@ The authors of the software in alphabetical order
 (if you have suggestions, questions, bug-reports...)
 
 -----------------------------------------------------
+
 Benjamin Franksen <franksen@mail.bessy.de>
 	bii_scripts in general
+
+Ralph Lange <lange@mail.bessy.de>
+	SetPerms
 
 Patrick Laux <laux@mail.bessy.de>
 	bii_scripts in general
