*** empty log message ***

--- a/doc/txt/AUTHORS
+++ b/doc/txt/AUTHORS
@@ -14,6 +14,7 @@ Patrick Laux <laux@mail.bessy.de>
 
 Goetz Pfeiffer <pfeiffer@mail.bessy.de>
 	bii_scripts in general
+ 	browsedb.pl
 	pfind.pl 
 	Sch2db.pl 
 	Pezca 
