grepDb.pl added

--- a/doc/txt/AUTHORS
+++ b/doc/txt/AUTHORS
@@ -6,6 +6,9 @@ The authors of the software in alphabetical order
 Benjamin Franksen <franksen@mail.bessy.de>
 	bii_scripts in general
 
+Bernhard Kuner <kuner@mail.bessy.de>
+        grepDb.pl
+        
 Ralph Lange <lange@mail.bessy.de>
 	SetPerms
 
