Perror and GetErrorString were added to Pezca
* This is version 0.5 of Pezca. The two functions Perror and GetErrorString
  were added which give more control on if and how error messages are printed.
* the copyright texts were changed, "Bessy" was replaced with "HZB".
* suplerfluous cvs entries in the MANIFEST file were removed.

--- a/src/perl/Pezca/README
+++ b/src/perl/Pezca/README
@@ -5,7 +5,8 @@ license:
 The software license is documented in the file LICENSE. 
 Note that this package contains code from the EPICS distribution
 in form of c source-code. Note that these files have their own copyright
-and were NOT developed at BESSY GmbH.
+and were NOT developed at the 
+Helmholtz-Zentrum Berlin fuer Materialien und Energie GmbH (HZB).
 
 compiling the module when EPICS is already installed:
 --------------------
