The generation of html documentation for Pezca can now be done by a script.
For now, this is not integrated with the perl makefile mechanism but a separate
script generates the HTML documentation.

--- a/src/perl/Pezca/README
+++ b/src/perl/Pezca/README
@@ -33,6 +33,8 @@ There is a man-page in the man-directory. In the examples directory there
 are 2 examples of a perl ca-gateway (the client reads the data via a 
 raw socket connection).
 
+make_html.sh creates html documentation in blib/html.
+
 
 Support of other platforms:
 ---------------------------
