BESSY -> HZB in README

--- a/README
+++ b/README
@@ -44,4 +44,5 @@ Licensing
 =========
 
 Currently BESSY internal use only. If not stated otherwise, copyrighted by
-BESSY mbh. The original license text can be found in "LICENSE".
+Helmholtz-Zentrum Berlin für Materialien und Energie. The original license
+text can be found in "LICENSE".
