There is now a separate config file that defines important make variables.
File "config.acc" is used to install bii_scripts at our development hosts elbe
and stretch at the HZB.

--- a/README
+++ b/README
@@ -20,6 +20,8 @@ call install like this::
   ./install.sh DIRECTORY
 
 All files are then installed below DIRECTORY.
+
+You fine-tune installation directories by editing file "config".
   
 Documentation
 =============
